removed player_stat_team_stat_aggregate.csv due to large file, added parquet file instead

--- a/helpers/fetching/create_features.ipynb
+++ b/helpers/fetching/create_features.ipynb
@@ -574,6 +574,21 @@
      "start_time": "2023-08-24T20:30:50.457380Z"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [],
+   "source": [
+    "merged_df.to_parquet('../../data/player_stat_team_stat_aggregate.parquet')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-25T13:08:36.057583Z",
+     "start_time": "2023-08-25T13:08:35.236426Z"
+    }
+   }
   }
  ],
  "metadata": {
